# yet_another_process_library

./: CMakeLists.txt  LICENSE  README.md
examples/: _arg_tester.cpp  eighth.cpp  fifth.cpp  first.cpp  fourth.cpp  ninth.cpp  ninth_unix.cpp  ninth_win.cpp  second.cpp  sixth.cpp  third.cpp
include/yet_another_process_library/: process.hpp
src/: process.cpp
